map object without validation

--- a/src/app/components/snake/snake.scss
+++ b/src/app/components/snake/snake.scss
@@ -1,7 +1,7 @@
 .snake {
   fill: rgb(42, 65, 65);
   stroke: rgb(42, 65, 65);
-  &:last-child {
+  &:first-child {
     fill: rgb(3, 164, 255);
     stroke: transparent;
   }
