--- a/src/app/components/snake/snake.scss
+++ b/src/app/components/snake/snake.scss
@@ -1,6 +1,7 @@
 .snake {
   fill: rgb(42, 65, 65);
   stroke: rgb(29, 48, 48);
+  transition: all .5s linear;
   &:last-child {
     fill: rgb(3, 164, 255);
     stroke: rgb(3, 164, 255);
