--- a/src/app/components/score/score.scss
+++ b/src/app/components/score/score.scss
@@ -1,9 +1,8 @@
 .score {
-  margin: auto;
-  color: rgb(23, 208, 151);
-  background-color: rgb(12, 6, 43);
+  
+  text-align: center;
 
   p {
-    font-size: 30px;
+    font-size: 50px;
   }
 }
